--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,32 @@
-<p>about-us works!</p>
+<div id="aboutus">
+    <section class="members">
+        <div class="container">
+            <h1 class="text-center">THE TEAM</h1>
+            <div class="row">
+                <div class="col-md-4 profile text-center">
+                    <div class="img-box">
+                        <img src="../../assets/Daniel-tim.jpg" class="img-responsive" style="max-height: 50%; max-width: 50%;"/>
+                    </div>
+                    <h2>Daniel Kurniawan</h2>
+                    <h3>00000043698</h3>
+                </div>
+                <div class="col-md-4 profile text-center">
+                    <div class="img-box">
+                        <img src="../../assets/Hulio-tim.jpg" class="img-responsive" style="max-height: 50%; max-width: 50%;"/>
+                    </div>
+                    <h2>Hulio Jonathan Lukman</h2>
+                    <h3>00000043686</h3>
+                </div>
+                <div class="col-md-4 profile text-center">
+                    <div class="img-box">
+                        <img src="../../assets/Bryan-tim.jpg" class="img-responsive" style="max-height: 50%; max-width: 50%;"/>
+                    </div>
+                    <h2>Bryan Rezki Nugraha</h2>
+                    <h3>00000044803</h3>
+                </div>
+            </div>
+            <h4>Tentang Kami</h4>
+            <p>Untuk keperluan ujian akhir semester mata kuliah IF231 - Pengantar Teknologi Internet, kami membuat sebuah website peta menggunakan framework Angular dan API ArcGIS untuk mengembangkan dan menyelesaikan proyek Ujian Akhir Semester kami. Dalam website kami, ada beberapa fitur-fitur menarik yang kami buat menggunakan API ArcGIS seperti fitur Zoom In/Zoom Out, Fitur mencari lokasi, Fitur bookmark, Fitur mengganti desain peta, dan banyak lainnya.</p>
+        </div>
+    </section>
+</div>
